Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7775

StatestoreSslTest and SessionExpiryTest can crash in pthread_mutex_lock

    XMLWordPrintableJSON

Details

    Description

      20:17:28 [==========] Running 2 tests from 2 test cases.
      20:17:28 [----------] Global test environment set-up.
      20:17:28 [----------] 1 test from StatestoreTest
      20:17:28 [ RUN      ] StatestoreTest.SmokeTest
      20:17:28 [       OK ] StatestoreTest.SmokeTest (24 ms)
      20:17:28 [----------] 1 test from StatestoreTest (24 ms total)
      20:17:28 
      20:17:28 [----------] 1 test from StatestoreSslTest
      20:17:28 [ RUN      ] StatestoreSslTest.SmokeTest
      20:17:28 terminate called after throwing an instance of 'boost::exception_detail::clone_impl<boost::exception_detail::error_info_injector<boost::lock_error> >'
      20:17:28   what():  boost: mutex lock failed in pthread_mutex_lock: Invalid argument
      20:17:28 Wrote minidump to /home/ubuntu/Impala/logs/be_tests/minidumps/statestore-test/63ff46ee-a127-4ef6-5bccb5ba-dc73c28a.dmp
      20:17:28 Wrote minidump to /home/ubuntu/Impala/logs/be_tests/minidumps/statestore-test/63ff46ee-a127-4ef6-5bccb5ba-dc73c28a.dmp
      20:17:28 
      

      https://jenkins.impala.io/job/ubuntu-16.04-from-scratch/3441

      This smells like a lifecycle bug in the backend test.

      Attachments

        Issue Links

          Activity

            People

              tarmstrong Tim Armstrong
              tarmstrong Tim Armstrong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: