be/src/statestore/statestore.h
@@ -157,6 +157,11 @@ class Statestore : public CacheLineAligned {
   /// The main processing loop. Runs infinitely.
   void MainLoop();
 
+  /// Shut down some background threads. Only used for testing. Note that this is not
+  /// a clean shutdown because we can't correctly tear down 'thrift_server_', so
+  /// not all background threads are stopped and this object cannot be destroyed.
+  void ShutdownForTesting();
+
   /// Returns the Thrift API interface that proxies requests onto the local Statestore.
   const boost::shared_ptr<StatestoreServiceIf>& thrift_iface() const {
     return thrift_iface_;
@@ -713,6 +718,6 @@ class Statestore : public CacheLineAligned {
   [[noreturn]] void MonitorSubscriberHeartbeat();
 };
 
-}
+} // namespace impala
 
 #endif
